--- a/biblist.bib
+++ b/biblist.bib
@@ -234,3 +234,19 @@ volume = {3},
 journal = {Advances in Computational Mathematics},
 %doi = {10.1007/BF02432002}
 }
+
+
+
+@InProceedings{connor-kumar_2010,
+author="Connor, Michael
+and Kumar, Piyush",
+editor="Festa, Paola",
+title="Practical Nearest Neighbor Search in the Plane",
+booktitle="Experimental Algorithms",
+year="2010",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="501--512",
+%abstract="This paper shows that using some very simple practical assumptions, one can design an algorithm that finds the nearest neighbor of a given query point in {\$}{\backslash}mathcal{\{}O{\}}({\backslash}log n){\$}time in theory and faster than the state of the art in practice. The algorithm and proof are both simple and the experimental results clearly show that we can beat the state of the art on most distributions in two dimensions.",
+%isbn="978-3-642-13193-6"
+}
