--- a/invariance-of-the-regularity-vector.tex
+++ b/invariance-of-the-regularity-vector.tex
@@ -104,7 +104,7 @@ $$
         \buildrel\ref[incrementformula]\over = {(g_k-s_G^{(k)\!}(x_k))^2\over \norm{s_G}_\phi^2\,P_{X^{(k)\!}}^2(x_k)}.
 $$
 
-The first thing to notice is that both expression share the term~$P_{X^{(k)\!}}^2(x_k)$, because we are keeping the data sites~$X$ fixed and are changing only the data values from $F$ to~$G$.  Looking at the numerator, we have the elements of the cross validation vectors~$\Bm E_{F\!}$ and $\Bm E_G$.  Using expression~\ref[EkWk], they can be written as
+The first thing to notice is that both expressions share the term~$P_{X^{(k)\!}}^2(x_k)$, because we are keeping the data sites~$X$ fixed and are changing only the data values from $F$ to~$G$.  Looking at the numerator, we have the elements of the cross validation vectors~$\Bm E_{F\!}$ and $\Bm E_G$.  Using expression~\ref[EkWk], they can be written as
 $$
 (f_k-s_F^{(k)\!}(x_k))^2 = (E_F)_k = \sum_{j=1}^N f_j\.{C_{k,j}\over C_{k,k}},\qquad
 (g_k-s_G^{(k)\!}(x_k))^2 = (E_G)_k = \sum_{j=1}^N g_j\.{C_{k,j}\over C_{k,k}}.
@@ -152,7 +152,7 @@ $$
 (\CA_{\Bm 0}\CC_{\!\!\Bm{--p}})\,ε^{-p} + (\CA_{\Bm 0} \CC_{\!\!\Bm{--p+}\Bm 1} + \CA_{\Bm 1}\CC_{\!\!\Bm{--p}})\,ε^{-p+1} + \cdots = \Bm I. 
 }
 $$
-In this equation, if we multiply both terms by~$ε^{-p\!}$ and then take the limit~$ε→0$, we obtain
+In this equation, if we multiply both sides by~$ε^{-p\!}$ and then take the limit~$ε→0$, we obtain
 $$
 \CA_{\Bm 0}\CC_{\!\!\Bm{--p}}= \Bm 0,
 $$
@@ -171,7 +171,7 @@ This kind of transformation is nothing more than the $1$-dimensional case of a {
 $$
 \Cal T(x) = r\, \Cal O(x) + t,\quad x\in\R^N,
 $$
-with $r$ being a positive real number, $\cal O$ an orthogonal\fnote{A transformation is {\em orthogonal} if it can be represented by an orthogonal matrix, that is a matrix whose inverse equals its transpose.  An orthogonal transformation is a rotation, a reflection, or a combination of them.} transformation, and~$t$ a point of~$\R^N$.   A similarity can thus be viewed simply as a transformation that preserves the {\em shape} of the object (in our case, of the set of points) to which it is applied.  
+with $r$ being a positive real number, $\cal O$ an orthogonal\fnote{A transformation is {\em orthogonal} if it can be represented by an orthogonal matrix, that is a matrix whose inverse equals its transpose.  An orthogonal transformation is a rotation, a reflection, or a combination of them.} transformation, and~$t$ a point of~$\R^N$.   A similarity can be viewed simply as a transformation that preserves the {\em shape} of the object (in our case, of the set of points) to which it is applied.  
 
 % It represent a transformation that doesn't change the shape...
 
