--- a/adding-data.tex
+++ b/adding-data.tex
@@ -130,7 +130,7 @@ On the other hand, if $s_{X,f}$ predicts at the point~$x$ a value~$s_{X,f}(x)$ d
 $$
 \norm{s_{X\cup\{x\},f}}_Φ^2 -\norm{s_{X,f}}_Φ^2= {(f(x) - s_{X, f}(x))^2\over P^2_X(x)},
 $$
-may be large not only if the prediction is bad, but also if the value of~$P_X$ at the new point~$x$ is small, which happens when $x$~is close to one of the points of~$X$.  Instead, in case $Φ$ is radial and for simplicity taken such that properties~\ref[convention] hold, when $x$ is sufficiently far from all the points of~$X$ the power function has no more influence on the difference between the squares of the native space norms, which in fact has value approximately equal simply to~$(f(x)-s_{X,f}(x))^2$. Refer to figure~\ref[powfig] for the justification of this fact.
+may be large not only if the prediction is bad, but also if the value of~$P_X$ at the new point~$x$ is small, which happens when $x$~is close to one of the points of~$X$.  Instead, in case $Φ$ is radial and for simplicity taken such that properties~\ref[convention] hold, when $x$ is sufficiently far from all the points of~$X$ the power function has no more influence on the difference between the squares of the native space norms, which in fact has value approximately equal simply to~$(f(x)-s_{X,f}(x))^2$. Refer to Figure~\ref[powfig] for the justification of this fact.
 
 
 
