--- a/building-a-regularity-classifier.tex
+++ b/building-a-regularity-classifier.tex
@@ -68,7 +68,7 @@ $$
 %This reasoning applied to relation~\ref[ACI] leads to the conclusion that~$C^{[k]}\neq 0$.  If fact, if 
 If the element~$C^{[k]}_k$ were equal to zero, then we could apply the just mentioned reasoning to relation~\ref[ACI] obtaining that
 $$
-\Bm A^{(k)}\,(C^{[k]}_1,\dots,\rlap{\typoscale[1700/]$\backslash$} C^{[k]}_k,\dots, C^{[k]}_N)^T =  \Bm 0,
+\Bm A^{(k)}\,(C^{[k]}_1,\dots,\rlap{\kern.1em\transformbox{\pdfscale{-1}{1.7}}{\lower.25ex\hbox{$/$}}} C^{[k]}_k,\dots, C^{[k]}_N)^T =  \Bm 0,
 $$
 and hence that $C^{[k]}_j$ would be zero also for each~$j\neq k$. Since equation~\ref[ACI]  implies that~$\Bm C^{\.[k]}$  cannot be the zero vector, we must conclude that~$C^{[k]}_k\neq 0$.
 
@@ -83,11 +83,11 @@ $$
 $$
 Since the vector~$\Bm b^{\lbrace k\rbrace\!}$ is such that~$b^{\lbrace k \rbrace\!}_k=0$, reasoning~\ref[reduction] applied to this last equation says that
 $$
-\Bm A\,(b^{\lbrace k\rbrace}_1,\dots,\rlap{$\!$\typoscale[1700/]$\backslash$} b^{\lbrace k\rbrace}_k,\dots, b^{\lbrace k\rbrace}_N)^T= \Bm f\,^{(k)}.
+\Bm A\,(b^{\lbrace k\rbrace}_1,\dots,\rlap{\transformbox{\pdfscale{-1}{1.7}}{\lower.25ex\hbox{$/$}}} b^{\lbrace k\rbrace}_k,\dots, b^{\lbrace k\rbrace}_N)^T= \Bm f\,^{(k)}.
 $$
 So, the vector that we called~$\Bm β^{\lbrace k\rbrace\!}$ happens to be the vector~$\Bm b^{\lbrace k\rbrace\!}$ without the $k$-th element, i.e.,
 $$
-\Bm β^{\lbrace k\rbrace\!} = (b^{\lbrace k\rbrace}_1,\dots,\rlap{$\!$\typoscale[1700/]$\backslash$} b^{\lbrace k\rbrace}_k,\dots, b^{\lbrace k\rbrace}_N)^T. \eqmark[rippabeta]
+\Bm β^{\lbrace k\rbrace\!} = (b^{\lbrace k\rbrace}_1,\dots,\rlap{\transformbox{\pdfscale{-1}{1.7}}{\lower.25ex\hbox{$/$}}} b^{\lbrace k\rbrace}_k,\dots, b^{\lbrace k\rbrace}_N)^T. \eqmark[rippabeta]
 $$
 
 Finally, for each~$k$, the evaluation of~$s^{(k)\!}$ at the point~$x_k\in X$ can be computed in the following way,
