--- a/positive-definite-functions.tex
+++ b/positive-definite-functions.tex
@@ -139,7 +139,7 @@ $$
 (I\phi)(r)=\int_r^\infty t\phi(t)\,dt\mathbox{,\quad $r\geq0$.}
 $$
 Then, starting from the truncated power functions  of the previous example and repeatedly applying the operator~$I$ it is possible to build compactly supported functions~$\phi_{d,k}$ (the subscript~$d$ is the space dimension, while the subscript~$k$ is related to the number of applied iterations of the integral operator) which have polynomial representations and are of the lowest possible degree relative to their smoothness and the space dimension.  Details about this construction are present for instance in Wendland~\cite[wendland_2004], Chapter~9. 
-We report in table~\ref[wentab], up to positive constant factors, the functions that can be obtained starting from the truncated power function of degree~$2$, along with their smoothness.  These are the most used Wendland’s compactly supported functions, since they work for dimensions~$d\leq 3$.
+We report in Table~\ref[wentab], up to positive constant factors, the functions that can be obtained starting from the truncated power function of degree~$2$, along with their smoothness.  These are the most used Wendland’s compactly supported functions, since they work for dimensions~$d\leq 3$.
 \postskip
 
 \label[wentab]
